// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KPICard given different currency, renders 1`] = `
<KPICard
  currency="USD"
  dataFormat="decimal"
  growth={0}
  showPercentage={true}
  title=""
  value={0}
>
  <styled.div>
    <div
      className="sc-AxiKw gFhYFB"
    >
      <Grid
        as={null}
        className=""
        columns=""
      >
        <Grid__Grid
          as={null}
          className=""
          columns={2}
        >
          <div
            className="Grid__Grid-gDLjRO jcWKgV"
          >
            <Cell__Cell
              data-cell-test={true}
              middle={true}
            >
              <div
                className="Cell__Cell-tAjrW cZXUpN"
                data-cell-test={true}
              >
                0
              </div>
            </Cell__Cell>
            <Cell__Cell
              as={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "baseHash": 1845756808,
                    "componentId": "sc-AxhCb",
                    "isStatic": false,
                    "rules": Array [
                      "
  justify-content: flex-end;
  display: inline-flex;
  flex-direction: column;
",
                    ],
                    "staticRulesId": "",
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "shouldForwardProp": undefined,
                  "styledComponentId": "sc-AxhCb",
                  "target": "span",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              center={true}
            >
              <styled.span
                center={true}
                className="Cell__Cell-tAjrW hmKLft"
              >
                <span
                  className="sc-AxhCb gyCRuM Cell__Cell-tAjrW hmKLft"
                >
                  <styled.span
                    data-flex-row-test={true}
                  >
                    <span
                      className="sc-AxhUy eJslfT"
                      data-flex-row-test={true}
                    >
                      0%
                      <Icon
                        as={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "baseHash": 1105857511,
                              "componentId": "sc-AxgMl",
                              "isStatic": false,
                              "rules": Array [
                                "
  font-size: 1rem;
  margin-left: 0.3rem;
",
                              ],
                              "staticRulesId": "",
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "shouldForwardProp": undefined,
                            "styledComponentId": "sc-AxgMl",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        className=""
                        customIcon={null}
                        name="minus"
                      >
                        <styled.span
                          as={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "baseHash": 1105857511,
                                "componentId": "sc-AxgMl",
                                "isStatic": false,
                                "rules": Array [
                                  "
  font-size: 1rem;
  margin-left: 0.3rem;
",
                                ],
                                "staticRulesId": "",
                              },
                              "displayName": "styled.div",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "shouldForwardProp": undefined,
                              "styledComponentId": "sc-AxgMl",
                              "target": "div",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          className={
                            Array [
                              "",
                              "lni",
                              "lni-minus",
                            ]
                          }
                        >
                          <styled.div
                            className="sc-AxjAm jWlVxK lni lni-minus"
                          >
                            <div
                              className="sc-AxgMl jmOfdg sc-AxjAm jWlVxK lni lni-minus"
                            />
                          </styled.div>
                        </styled.span>
                      </Icon>
                    </span>
                  </styled.span>
                </span>
              </styled.span>
            </Cell__Cell>
          </div>
        </Grid__Grid>
      </Grid>
    </div>
  </styled.div>
</KPICard>
`;

exports[`KPICard given different props, renders 1`] = `
<KPICard
  currency={null}
  dataFormat="decimal"
  growth={42}
  redValue={true}
  showPercentage={true}
  title="Some other title"
  value={0}
>
  <styled.div>
    <div
      className="sc-AxiKw gFhYFB"
    >
      Some other title
      <Grid
        as={null}
        className=""
        columns=""
      >
        <Grid__Grid
          as={null}
          className=""
          columns={2}
        >
          <div
            className="Grid__Grid-gDLjRO jcWKgV"
          >
            <Cell__Cell
              data-cell-test={true}
              middle={true}
            >
              <div
                className="Cell__Cell-tAjrW cZXUpN"
                data-cell-test={true}
              >
                0
              </div>
            </Cell__Cell>
            <Cell__Cell
              as={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "baseHash": 1845756808,
                    "componentId": "sc-AxhCb",
                    "isStatic": false,
                    "rules": Array [
                      "
  justify-content: flex-end;
  display: inline-flex;
  flex-direction: column;
",
                    ],
                    "staticRulesId": "",
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "shouldForwardProp": undefined,
                  "styledComponentId": "sc-AxhCb",
                  "target": "span",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              center={true}
            >
              <styled.span
                center={true}
                className="Cell__Cell-tAjrW hmKLft"
              >
                <span
                  className="sc-AxhCb gyCRuM Cell__Cell-tAjrW hmKLft"
                >
                  <styled.span
                    data-flex-row-test={true}
                  >
                    <span
                      className="sc-AxhUy eJslfT"
                      data-flex-row-test={true}
                    >
                      +
                      4,200%
                      <Icon
                        as={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "baseHash": 1105857511,
                              "componentId": "sc-AxgMl",
                              "isStatic": false,
                              "rules": Array [
                                "
  font-size: 1rem;
  margin-left: 0.3rem;
",
                              ],
                              "staticRulesId": "",
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "shouldForwardProp": undefined,
                            "styledComponentId": "sc-AxgMl",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        className=""
                        customIcon={null}
                        name="chevron-up"
                      >
                        <styled.span
                          as={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "baseHash": 1105857511,
                                "componentId": "sc-AxgMl",
                                "isStatic": false,
                                "rules": Array [
                                  "
  font-size: 1rem;
  margin-left: 0.3rem;
",
                                ],
                                "staticRulesId": "",
                              },
                              "displayName": "styled.div",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "shouldForwardProp": undefined,
                              "styledComponentId": "sc-AxgMl",
                              "target": "div",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          className={
                            Array [
                              "",
                              "lni",
                              "lni-chevron-up",
                            ]
                          }
                        >
                          <styled.div
                            className="sc-AxjAm jWlVxK lni lni-chevron-up"
                          >
                            <div
                              className="sc-AxgMl jmOfdg sc-AxjAm jWlVxK lni lni-chevron-up"
                            />
                          </styled.div>
                        </styled.span>
                      </Icon>
                    </span>
                  </styled.span>
                </span>
              </styled.span>
            </Cell__Cell>
          </div>
        </Grid__Grid>
      </Grid>
    </div>
  </styled.div>
</KPICard>
`;

exports[`KPICard given negative growth, renders 1`] = `
<KPICard
  currency={null}
  dataFormat="decimal"
  growth={-42}
  showPercentage={true}
  title=""
  value={0}
>
  <styled.div>
    <div
      className="sc-AxiKw gFhYFB"
    >
      <Grid
        as={null}
        className=""
        columns=""
      >
        <Grid__Grid
          as={null}
          className=""
          columns={2}
        >
          <div
            className="Grid__Grid-gDLjRO jcWKgV"
          >
            <Cell__Cell
              data-cell-test={true}
              middle={true}
            >
              <div
                className="Cell__Cell-tAjrW cZXUpN"
                data-cell-test={true}
              >
                0
              </div>
            </Cell__Cell>
            <Cell__Cell
              as={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "baseHash": 1845756808,
                    "componentId": "sc-AxhCb",
                    "isStatic": false,
                    "rules": Array [
                      "
  justify-content: flex-end;
  display: inline-flex;
  flex-direction: column;
",
                    ],
                    "staticRulesId": "",
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "shouldForwardProp": undefined,
                  "styledComponentId": "sc-AxhCb",
                  "target": "span",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              center={true}
            >
              <styled.span
                center={true}
                className="Cell__Cell-tAjrW hmKLft"
              >
                <span
                  className="sc-AxhCb gyCRuM Cell__Cell-tAjrW hmKLft"
                >
                  <styled.span
                    data-flex-row-test={true}
                  >
                    <span
                      className="sc-AxhUy eJslfT"
                      data-flex-row-test={true}
                    >
                      -4,200%
                      <Icon
                        as={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "baseHash": 1105857511,
                              "componentId": "sc-AxgMl",
                              "isStatic": false,
                              "rules": Array [
                                "
  font-size: 1rem;
  margin-left: 0.3rem;
",
                              ],
                              "staticRulesId": "",
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "shouldForwardProp": undefined,
                            "styledComponentId": "sc-AxgMl",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        className=""
                        customIcon={null}
                        name="chevron-down"
                      >
                        <styled.span
                          as={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "baseHash": 1105857511,
                                "componentId": "sc-AxgMl",
                                "isStatic": false,
                                "rules": Array [
                                  "
  font-size: 1rem;
  margin-left: 0.3rem;
",
                                ],
                                "staticRulesId": "",
                              },
                              "displayName": "styled.div",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "shouldForwardProp": undefined,
                              "styledComponentId": "sc-AxgMl",
                              "target": "div",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          className={
                            Array [
                              "",
                              "lni",
                              "lni-chevron-down",
                            ]
                          }
                        >
                          <styled.div
                            className="sc-AxjAm jWlVxK lni lni-chevron-down"
                          >
                            <div
                              className="sc-AxgMl jmOfdg sc-AxjAm jWlVxK lni lni-chevron-down"
                            />
                          </styled.div>
                        </styled.span>
                      </Icon>
                    </span>
                  </styled.span>
                </span>
              </styled.span>
            </Cell__Cell>
          </div>
        </Grid__Grid>
      </Grid>
    </div>
  </styled.div>
</KPICard>
`;

exports[`KPICard renders 1`] = `
<KPICard
  currency="EUR"
  dataFormat="currency"
  greenValue={true}
  growth={0}
  showPercentage={false}
  title="Some title"
  value={42}
>
  <styled.div>
    <div
      className="sc-AxiKw gFhYFB"
    >
      Some title
      <Grid
        as={null}
        className=""
        columns=""
      >
        <Grid__Grid
          as={null}
          className=""
          columns={2}
        >
          <div
            className="Grid__Grid-gDLjRO jcWKgV"
          >
            <Cell__Cell
              data-cell-test={true}
              middle={true}
            >
              <div
                className="Cell__Cell-tAjrW cZXUpN"
                data-cell-test={true}
              >
                €42.00
              </div>
            </Cell__Cell>
          </div>
        </Grid__Grid>
      </Grid>
    </div>
  </styled.div>
</KPICard>
`;
